<resources>
    <string name="app_name">北斗安全监测</string>
    <string name="login">登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="bd_socc">北斗安全监测系统</string>
    <string name="monitoring_center">监测中心</string>
    <string name="tool">工具</string>
    <string name="hcbd">华创北斗</string>
    <string name="map">地图</string>
    <string name="device_manager">设备管理</string>
    <string name="device_info">设备信息</string>
    <string name="data">数据</string>
    <string name="chart">图表</string>
    <string name="early_warning">预警</string>
    <string name="video">视频</string>
    <string name="video_list">视频列表</string>
    <string name="resolver_manager">解算程序管理</string>
    <string name="setting">设置</string>
    <string name="check_update">检测更新</string>
    <string name="feedback">意见反馈</string>
    <string name="input_feedback">请输入遇到的问题或者建议...</string>
    <string name="about_us">关于我们</string>
    <string name="product_center">产品中心</string>
    <string name="contact_us">联系我们</string>
    <string name="device_state_list">设备状态列表</string>
    <string name="device_state">设备状态:</string>
    <string name="device_state_">设备状态</string>
    <string name="auto_refresh">自动刷新设置</string>
    <string name="save">保存</string>
    <string name="connect">连接</string>
    <string name="danger">危险</string>
    <string name="disconnect">断开</string>
    <string name="order">序号</string>
    <string name="device_name">设备名称</string>
    <string name="device_name_">设备名</string>
    <string name="input_device_name">请输入或选择设备名称</string>
    <string name="select_device_name">请选择设备名称</string>
    <string name="device_type">设备类型</string>
    <string name="input_device_type">请选择设备类型</string>
    <string name="operation">操作</string>
    <string name="edit">编辑</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="code">编码</string>
    <string name="name">名称</string>
    <string name="input_name">请输入名称</string>
    <string name="sn">SN</string>
    <string name="input_sn">请输入SN码</string>
    <string name="startX">起始X</string>
    <string name="input_startX">请输入起始X</string>
    <string name="startY">起始Y</string>
    <string name="input_startY">请输入起始Y</string>
    <string name="startH">起始H</string>
    <string name="input_startH">请输入起始H</string>
    <string name="upload_code">上级编码</string>
    <string name="input_upload_code">请输入或选择上级编码</string>
    <string name="reference_device">参考设备</string>
    <string name="solu_time">解算时间</string>
    <string name="input_solu_time">请输入解算时间</string>
    <string name="subordinate_item">所属项目</string>
    <string name="input_subordinate_item">请选择所属项目</string>
    <string name="remark">备注</string>
    <string name="input_remark">请输入备注</string>
    <string name="port">端口</string>
    <string name="input_port">请输入端口</string>
    <string name="unit">单位</string>
    <string name="input_unit">请输入单位</string>
    <string name="position">偏移坐标</string>
    <string name="input_position">请输入偏移坐标</string>
    <string name="autogeneration">自动生成</string>
    <string name="sec">秒</string>
    <string name="on">启动</string>
    <string name="off">关闭</string>
    <string name="danger_device_list">危险设备列表</string>
    <string name="danger_list">告警数据列表</string>
    <string name="search_danger_list">告警数据搜索</string>
    <string name="deal_warn_data">告警数据处理</string>
    <string name="danger_name">警告名</string>
    <string name="warn_name">预警名称</string>
    <string name="input_warn_name">请输入预警名称</string>
    <string name="real_state">处理状态</string>
    <string name="select_real_state">请选择处理状态</string>
    <string name="begin_time">开始时间</string>
    <string name="select_begin_time">请选择开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="search">搜索</string>
    <string name="v1">触发值1</string>
    <string name="v2">触发值2</string>
    <string name="v3">触发值3</string>
    <string name="s1">设定值1</string>
    <string name="input_s1">请输入设定值1</string>
    <string name="s2">设定值2</string>
    <string name="input_s2">请输入设定值2</string>
    <string name="s3">设定值3</string>
    <string name="input_s3">请输入设定值3</string>
    <string name="real_result">处理结果</string>
    <string name="input_real_result">请输入处理结果</string>
    <string name="alarm_time">报警时间</string>
    <string name="deal_time">处理时间</string>
    <string name="warn_search">预警搜索</string>
    <string name="data_search">数据搜索</string>
    <string name="warn_info">预警信息</string>
    <string name="warn_code">预警编码</string>
    <string name="query_info">查询条件</string>
    <string name="introduce_01">\t\t武汉华创北斗技术有限公司（以下简称“华创北斗”）是一家集研发、应用开发、生产、销售、服务为一体的高新技术企业。以北斗应用、通信导航、信息系统集成、测绘地理信息、安全监测、水土保持监测、软硬件研发、科研合作、技术服务为主，致力于为用户提供基于物联网、北斗全球卫星高精度定位、信息通信网络等技术的行业应用解决方案，不断推动中国卫星定位导航产业的发展。</string>
    <string name="introduce_02">\t\t华创北斗依托武汉“全国科教基地”雄厚的科技人才资源沃土，通过与全国知名211和985重点学科高校武汉大学、武汉理工大学、成都理工大学、深圳大学的产学研合作，在中国测绘学会摄影测量与遥感专业委员会委员、成都理工大学博士生导师杨武年教授、武汉大学测绘学院博士生导师、武汉理工大学土木与建筑学院博士生的关怀帮助下，组建了高水平的企业研发团队，致力于北斗应用与通信研发，在物联网、信息通信、安全监测、测绘地理信息等方面取得了可喜的科研技术成果。</string>
    <string name="introduce_03">\t\t华创北斗始终坚持核心技术领先战略，先后取得了多项专利和多项软件著作权，成功研发多款测地型接收机、单点定位手持机、北斗配网传输终端、应急救援单兵系统、超高精度车辆定位导航系统、水土保持自动化监测系统等产品，产品性能达到行业领先水平。</string>
    <string name="introduce_04">\t\t公司始终秉持“信赖源于诚信，自信源于专业，卓越源于创新，完美源于精细，品质源于服务”的理念，注重科技创新和知识产权保护，在持续追求技术、品质完美的过程中，不断享受着创新的激情、实现价值和追逐梦想的快乐。</string>
    <string name="culture_01">\t\t\t\t兴电子伟业，推动中国卫星导航产业国际化！</string>
    <string name="culture_02">\t\t\t\t为客户创造价值；为员工创造幸福；为股东创造财富；为社会承担责任！</string>
    <string name="culture_03">\t\t\t\t华兴未来 创新诚信</string>
    <string name="culture_04">\t\t\t\t让客户多一份价值\n\t\t\t\t让世界多一份平安\n\t\t\t\t让员工多一份幸福</string>
    <string name="culture_05">\t\t\t\t为客户利益而努力创新</string>
    <string name="culture_title_01">愿景：</string>
    <string name="culture_title_02">宗旨：</string>
    <string name="culture_title_03">精神：</string>
    <string name="culture_title_04">核心价值观：</string>
    <string name="culture_title_05">核心理念：</string>
    <string name="address">公司地址：湖北省武汉市洪山区文秀街10号中石大楼1号门9楼</string>
    <string name="postcode">邮政编码：430070</string>
    <string name="phone">全国服务热线电话：027-87615969</string>
    <string name="fax">传真：027-87615969</string>
    <string name="email">邮箱：huachuangbeidou@163.com</string>
    <string name="web">唯一官方网站：www.whhcbd.com</string>
    <string name="wechat_public">微信公众号：hc_BDS</string>
    <string name="wechat_qr_code">微信公众号二维码</string>
    <string name="product_features">产品特点</string>
    <string name="product_details">产品详情</string>
    <string name="product_features01">1）\t简介\nHX mini-1型GNSS接收机是华创自主研发的新一代接收机，采用BDS三频、GPS三频双系统六频进行联合定位，具有超远距离的RTK解算引擎。在超远距离的情况下单系统可以达到分米级精度。\n2）\t主要特性\n1.\t支持短中长基线，RTK作业距离最长可达50km。\n2.\t支持超长基线E-RTK测量，作业距离最长可达150km。\n3.\t支持单系统独立定位和双系统联合定位。\n4.\t支持动态基站，可以用于二维定向、三维测姿。\n5.\t兼容进口板卡的物理尺寸、电气接口以及口令报文。\n6.\t可直接输出PJK平面坐标，易于各种系统集成及机械控制等。\n7.\t支持定制化服务，可以满足不同行业应用的不同需求。\n8.\t内存数据存储，可自动记录原始数据（可接外置存储）。\n9.\t体积小、重量轻、功耗低。</string>
    <string name="product_features02">1）\t简介\nHX-P8手持机是武汉华创北斗技术有限公司为行业测量用户倾心打造的一款基于Android平台的手薄式GNSS接收机。该产品使用android4.4.2操作系统，配置7吋彩色液晶触摸屏，支持GPS+北斗+Glonass服务，可达到单点定位精度1米以内。该产品界面简洁美观易操作，功能全面，包含坐标转化、普通测量、点位放样等多个功能，参数配置多样。在测绘服务行业应用广泛，可满足国土测绘、不动产确权、地下管网信息化的施测要求。\n2）\t主要特性\n1.\t采用三星七频联合定位技术，定位精确。\n2.\t单点定位功能，无需通讯，从此摆脱RTK作业距离的限制。\n3.\t单点定位不依靠任何外界数据，无后期费用产生。\n4.\t采用安卓系统，使操作更简单。\n5.\t内置功能强大的应用软件，方便用户的专业应用。\n6.\t内置多重网络通讯方式，可连接不同网络上传作业数据。\n7.\t支持传统RTK方式作业，能提供更为精准的定位信息。\n8.\t强大的工业防护设计，具备全天候使用需要。\n9.\t内置超大容量电池，10小时续航时间，让工作更专业。\n10.\t强大的技术团队，提供各种定制化服务，让工作更专业。</string>
    <string name="time">时间</string>
    <string name="add_feedback_image">添加图片（选填，提供问题截图）</string>
    <string name="contact_way">联系方式</string>
    <string name="input_contact_way">请输入手机号或邮箱</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">服务器地址</string>
    <string name="ip_address_demo">服务器地址（例如：192.168.0.1：8080）</string>
    <string name="input_ip_address">请输入服务器地址</string>
    <string name="str_history">历史记录</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="camera_lens_closed">镜头遮蔽中</string>
    <string name="ptz">云台</string>
    <string name="talk">对讲</string>
    <string name="source_detection_off">OFF</string>
    <string name="source_detection_on">ON</string>
    <string name="close_source_localization">听声辨位关闭</string>
    <string name="close_camera_lens">镜头遮蔽</string>
    <string name="capture">截图</string>
    <string name="record">录像</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="quality_hd">高清</string>
    <string name="quality_flunet">流畅</string>
    <string name="quality_balanced">均衡</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="realplay_full_talk_start_tip">你可以开始说话了</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="talking">对讲中…</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="play_hour">点</string>
    <string name="local_play_hour">点</string>
    <string name="more_local_image">更多本地录像</string>
    <string name="local_video_not_delete">本地录像不支持删除</string>
    <string name="touch_to_load">轻触屏幕重新加载</string>
    <string name="ez_cloud_video">云录像</string>
    <string name="ez_device_video">SD卡录像</string>
    <string name="ez_no_remote_data">没有查询到云录像</string>
    <string name="delete">删除</string>
    <string name="ez_no_remote_data_device">没有查询到本地录像</string>
    <string name="auto_play_time">%s秒钟后为你自动播放下一段视频</string>
    <string name="cancel">取消</string>
    <string name="camera_not_online">设备不在线</string>
    <string name="remoteplayback_fail">视频播放失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
</resources>