<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorAccent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/selector_back_bg"
            android:paddingLeft="30px"
            android:paddingRight="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="36px"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.baidu.mapapi.map.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="380px"
                android:clickable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/address"
                android:layout_marginTop="48px"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/postcode"
                android:layout_marginTop="17px"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/phone"
                android:layout_marginTop="17px"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/fax"
                android:layout_marginTop="17px"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/email"
                android:layout_marginTop="17px"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/web"
                android:layout_marginTop="17px"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26px"
                android:text="@string/wechat_public"
                android:layout_marginTop="17px"
                android:gravity="center_horizontal"/>

            <ImageView
                android:layout_width="185px"
                android:layout_height="185px"
                android:src="@drawable/image_wechar_qr_code"
                android:layout_marginTop="56px"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_qr_code"
                android:textColor="@color/black"
                android:textSize="26px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20px"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
