<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="67px"
        android:gravity="center"
        android:text="@string/danger_device_list"
        android:textSize="28px"
        android:textColor="@color/red"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textSize="24px"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/device_name"
            android:textColor="@color/black"
            android:textSize="24px"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/device_type"
            android:textColor="@color/black"
            android:textSize="24px"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:text="@string/device_state_"
            android:textColor="@color/black"
            android:textSize="24px"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"/>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1px"
        android:divider="@color/divider_line"/>

</LinearLayout>