<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_state_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorAccent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/selector_back_bg"
            android:paddingLeft="30px"
            android:paddingRight="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_state_list"
            android:textColor="@color/white"
            android:textSize="36px"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginBottom="20px"
        android:layout_marginLeft="30px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_state"
            android:textColor="@color/black"
            android:textSize="26px"/>
        <ImageView
            android:layout_width="24px"
            android:layout_height="24px"
            android:src="@drawable/shape_green_circle"
            android:layout_marginLeft="50px"
            android:layout_marginRight="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textColor="@color/black"
            android:textSize="26px"/>
        <ImageView
            android:layout_width="24px"
            android:layout_height="24px"
            android:src="@drawable/shape_red_circle"
            android:layout_marginLeft="80px"
            android:layout_marginRight="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danger"
            android:textColor="@color/black"
            android:textSize="26px"/>
        <ImageView
            android:layout_width="24px"
            android:layout_height="24px"
            android:src="@drawable/shape_yellow_circle"
            android:layout_marginLeft="80px"
            android:layout_marginRight="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:textColor="@color/black"
            android:textSize="26px"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65px"
        android:orientation="horizontal"
        android:background="@color/gray"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="26px"
            android:text="@string/order"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="26px"
            android:text="@string/device_name"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="26px"
            android:text="@string/device_type"
            android:gravity="center"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"/>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider_line"
        android:dividerHeight="1px"/>

</LinearLayout>
