<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorAccent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/selector_back_bg"
            android:paddingLeft="30px"
            android:paddingRight="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_info"
            android:textColor="@color/white"
            android:textSize="36px"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/selector_edit_bg"
            android:paddingRight="25px"
            android:paddingLeft="15px"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"
        android:layout_marginTop="20px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75px"
            android:orientation="horizontal">
            <TextView
                android:text="@string/warn_code"
                style="@style/device_info_text_title_style" />
            <TextView
                android:id="@+id/tv_warn_code"
                style="@style/device_info_text_style" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75px"
            android:orientation="horizontal">
            <TextView
                android:text="@string/warn_name"
                style="@style/device_info_text_title_style" />
            <TextView
                android:id="@+id/tv_warn_name"
                style="@style/device_info_text_style" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75px"
            android:orientation="horizontal">
            <TextView
                android:text="@string/device_name"
                style="@style/device_info_text_title_style" />
            <TextView
                android:id="@+id/tv_device_name"
                style="@style/device_info_text_style" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75px"
            android:orientation="horizontal">
            <TextView
                android:text="@string/s1"
                style="@style/device_info_text_title_style" />
            <TextView
                android:id="@+id/tv_s1"
                style="@style/device_info_text_style" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75px"
            android:orientation="horizontal">
            <TextView
                android:text="@string/s2"
                style="@style/device_info_text_title_style" />
            <TextView
                android:id="@+id/tv_s2"
                style="@style/device_info_text_style" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75px"
            android:orientation="horizontal">
            <TextView
                android:text="@string/s3"
                style="@style/device_info_text_title_style" />
            <TextView
                android:id="@+id/tv_s3"
                style="@style/device_info_text_style" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line"/>

</LinearLayout>
